objects/SVMXC__PM_Schedule_Template__c.object
<CustomObject>
    <fields>
        <fullName>Number_of_Technicians_Needed__c</fullName>
        <label>Number of Technicians Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Visit_Description__c</fullName>
        <label>Visit Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WoDefaultEstimatedDuration__c</fullName>
        <defaultValue>120</defaultValue>
        <description>Used to prepopulate the Work Order estimated duration.</description>
        <label>WO Default Estimated Duration (Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>